# Research-paper-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  server.py
backend/: app.py  fncs.py  logging.py  main.py
backend/functions/: fncs.py
backend/rag_pipeline/: rag.py  retriver.py
backend/router/: main.py
