[project]
name = "patent-ip-research-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.3",
    "fastmcp>=3.3.1",
    "feedparser>=6.0.12",
    "langchain>=1.3.2",
    "requests>=2.34.2",
]
